# python-fastapi-code-challenge-template

./: Makefile  README.md  docker-compose.yml
backend/: Makefile
backend/app/: .coverage  .dockerignore  .env  .env.test  Dockerfile  Dockerfile.multi-stage  pyproject.toml  setup_env.sh
backend/app/alembic/: env.py
backend/app/alembic/versions/: 833705e6b3a8_create_a_baseline_autogenerate_migration.py
backend/app/src/: __init__.py  application_container.py  main.py
backend/app/src/controller/dto/: auth_dto.py  error_dto.py  error_response_dto.py  health_dto.py  health_response_dto.py  sign_up_request_dto.py  sign_up_response_dto.py  user_credentials_dto.py
backend/app/src/controller/middlewares/: jwt_auth_middleware.py
backend/app/src/controller/model/: auth.py  error.py  health.py  pagination.py  salesperson_type.py  transaction.py  upload_file.py
backend/app/src/infrastructure/: __init__.py  application_settings.py
backend/app/src/router/: auth_router.py  health_router.py
backend/app/src/service/: auth.py  auth_service.py  health.py  health_service.py  test_auth_service.py  test_health_service.py  transaction.py
backend/app/src/utils/: __init__.py  api_exceptions.py  datetime.py  file_extension.py  pagination.py  security.py
backend/app/test/: conftest.py
backend/app/test/controller/: test_controller_fixtures.py
backend/app/test/e2e/: test_health_e2e.py
backend/app/test/factory/: auth_factory.py
backend/app/tests/: conftest.py
backend/app/tests/controller/: test_controller_fixtures.py
backend/app/tests/factory/: auth_factory.py
(+57 files in other folders)
