[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Ícaro Ribeiro <icaroribeiro@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = {extras = ["asyncio"], version = "^2.0.23"}
SQLAlchemy-serializer = "^1.4.1"
asyncpg = "^0.29.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.2"
dependency-injector = "^4.41.0"
passlib = "^1.7.4"
bcrypt = "3.2.2"
email-validator = "^2.1.0"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
isort = "^5.13.0"
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
